# FastAPI_StudyPlatform

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_05_14_1631-8924873e8015_create_user_table.py  2025_05_22_1934-26a0b99f07f1_create_access_tokens_table.py
study_platform/backend/: .env.template  main.py
study_platform/backend/core/: config.py
study_platform/backend/core/authentication/: transport.py
study_platform/backend/core/models/: __init__.py  access_token.py  base.py  db_helper.py  user.py
