[project]
name = "study_platform"
version = "0.1.0"
description = ""
authors = [
    {name = "Georgiy Sheynberg",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "sqlalchemy[asincio] (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
